--- a/src/views/PAT-035/empleados.hbs
+++ b/src/views/PAT-035/empleados.hbs
@@ -234,16 +234,13 @@
                                         <a href="/PAT-035/home">Estadisticas</a>
                                     </li>
                                     <li>
-                                        <a href="index.html">Ecommerce</a>
+                                        <a href="index.html">Estadisticas globales</a>
                                     </li>
                                     <li>
                                         <a href="/PAT-035/empleados">Empleados</a>
                                     </li>
                                     <li>
-                                        <a href="dashboard-crm.html">CRM</a>
-                                    </li>
-                                    <li>
-                                        <a href="dashboard-wallet.html">E-Wallet</a>
+                                        <a href="dashboard-crm.html">Generar reporte</a>
                                     </li>
                                 </ul>
                             </div>
