--- a/src/views/PAT-035/empleados.hbs
+++ b/src/views/PAT-035/empleados.hbs
@@ -220,30 +220,36 @@
                     <!--- Sidemenu -->
                     <ul class="side-nav">
 
-                        <li class="side-nav-title">Navigation</li>
+                        <li class="side-nav-title">Navegación</li>
 
                         <li class="side-nav-item">
                             <a data-bs-toggle="collapse" href="#sidebarDashboards" aria-expanded="false" aria-controls="sidebarDashboards" class="side-nav-link">
-                                <i class="uil-home-alt"></i>
-                                <span class="badge bg-success float-end">5</span>
-                                <span> Dashboards </span>
+                                <i class="uil-globe"></i>
+                                <span class="badge bg-success float-end">4</span>
+                                <span> Apartados </span>
                             </a>
                             <div class="collapse" id="sidebarDashboards">
                                 <ul class="side-nav-second-level">
-                                     <li>
-                                        <a href="/PAT-035/home">Estadisticas</a>
+                                    <li>
+                                        <a href="/PAT-035/home">
+                                            <i class="uil-graph-bar"></i>
+                                            <span>Estadísticas</span>
+                                        </a>
                                     </li>
                                     <li>
-                                        <a href="index.html">Ecommerce</a>
+                                        <a href="/PAT-035/estadisticasGlobales">
+                                            <i class="uil-graph-bar"></i>
+                                            <span>Estadísticas globales</span>
+                                        </a>
                                     </li>
                                     <li>
-                                        <a href="/PAT-035/empleados">Empleados</a>
+                                        <a href="/PAT-035/empleados">
+                                            <i class="uil-user"></i>
+                                            <span>Empleados</span>
+                                        </a>
                                     </li>
                                     <li>
-                                        <a href="dashboard-crm.html">CRM</a>
-                                    </li>
-                                    <li>
-                                        <a href="dashboard-wallet.html">E-Wallet</a>
+                                        <a href="dashboard-crm.html">Generar reporte</a>
                                     </li>
                                 </ul>
                             </div>
