--- a/src/views/PAT-035/empleados.hbs
+++ b/src/views/PAT-035/empleados.hbs
@@ -361,51 +361,27 @@
                         <div class="row" >
                             <div class="col-lg-4">
                                 <div class="card">
-                                    <div class="card-header d-flex justify-content-between align-items-center">
-                                        <h4 class="header-title">Estado de encuesta</h4>
-                                       
+                                <div class="d-flex card-header justify-content-between align-items-center">
+                                    <h4 class="header-title">Estado de Encuesta</h4>
+                                    
+                                </div>
+
+                                <div class="card-body pt-0">
+                                    <div id="average-sales" class="apex-charts mb-4 mt-2"
+                                        data-colors="#0acf97,#fa5c7c"></div>
+
+                                    <div class="chart-widget-list">
+                                        
+                                        <p>
+                                            <i class="mdi mdi-square text-danger"></i> Sin completar                                         
+                                        </p>
+                                        <p>
+                                            <i class="mdi mdi-square text-success"></i> Completado
+                                        </p>
+                                        
                                     </div>
-
-                                    <div class="card-body pt-0">
-                                        <div class="mt-3 mb-4 chartjs-chart" style="height: 204px;">
-                                            <canvas id="project-status-chart" data-colors="#0acf97,#727cf5,#fa5c7c"></canvas>
-                                        </div>
-
-                                        <div class="row text-center mt-2 py-2">
-                                            <div class="col-sm-4">
-                                                <div class="my-2 my-sm-0">
-                                                        <i class="mdi mdi-trending-up text-success mt-3 h3"></i>
-                                                    <h3 class="fw-normal">
-                                                        <span>64%</span>
-                                                    </h3>
-                                                    <p class="text-muted mb-0">Completed</p>
-                                                </div>
-                                                
-                                            </div>
-                                            <div class="col-sm-4">
-                                                <div class="my-2 my-sm-0">
-                                                        <i class="mdi mdi-trending-down text-primary mt-3 h3"></i>
-                                                    <h3 class="fw-normal">
-                                                        <span>26%</span>
-                                                    </h3>
-                                                    <p class="text-muted mb-0"> In-progress</p>
-                                                </div>
-                                                
-                                            </div>
-                                            <div class="col-sm-4">
-                                                <div class="my-2 my-sm-0">
-                                                        <i class="mdi mdi-trending-down text-danger mt-3 h3"></i>
-                                                    <h3 class="fw-normal">
-                                                        <span>10%</span>
-                                                    </h3>
-                                                    <p class="text-muted mb-0"> Behind</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- end row-->
-
-                                    </div> <!-- end card body-->
-                                </div> <!-- end card -->
+                                </div> <!-- end card-body-->
+                            </div> <!-- end card-->
                             </div><!-- end col-->
 
                             <div class="col-lg-8 " >
