--- a/src/views/PAT-035/profile.hbs
+++ b/src/views/PAT-035/profile.hbs
@@ -11,7 +11,7 @@
                         <!-- Topbar Brand Logo -->
                         <div class="logo-topbar">
                             <!-- Logo light -->
-                            <a href="index.html" class="logo-light">
+                            <a href="/PAT-035/home" class="logo-light">
                                 <span class="logo-lg">
                                     <img src=" /images/logo.png" alt="logo">
                                 </span>
@@ -21,7 +21,7 @@
                             </a>
 
                             <!-- Logo Dark -->
-                            <a href="index.html" class="logo-dark">
+                            <a href="/PAT-035/home" class="logo-dark">
                                 <span class="logo-lg">
                                     <img src=" /images/logo-dark.png" alt="dark logo">
                                 </span>
@@ -45,99 +45,35 @@
                             </div>
                         </button>
 
-                        <!-- Topbar Search Form -->
-                        <div class="app-search dropdown d-none d-lg-block">
-                          
-
-                            <div class="dropdown-menu dropdown-menu-animated dropdown-lg" id="search-dropdown">
-                                <!-- item-->
-                                <div class="dropdown-header noti-title">
-                                    <h5 class="text-overflow mb-2">Found <span class="text-danger">17</span> results</h5>
-                                </div>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    <i class="uil-notes font-16 me-1"></i>
-                                    <span>Analytics Report</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    <i class="uil-life-ring font-16 me-1"></i>
-                                    <span>How can I help you?</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    <i class="uil-cog font-16 me-1"></i>
-                                    <span>User profile settings</span>
-                                </a>
-
-                                <!-- item-->
-                                <div class="dropdown-header noti-title">
-                                    <h6 class="text-overflow mb-2 text-uppercase">Users</h6>
-                                </div>
-
-                                <div class="notification-list">
-                                    <!-- item-->
-                                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                        <div class="d-flex">
-                                            <img class="d-flex me-2 rounded-circle" src=" /images/users/avatar-2.jpg" alt="Generic placeholder image" height="32">
-                                            <div class="w-100">
-                                                <h5 class="m-0 font-14">Erwin Brown</h5>
-                                                <span class="font-12 mb-0">UI Designer</span>
-                                            </div>
-                                        </div>
-                                    </a>
-
-                                    <!-- item-->
-                                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                        <div class="d-flex">
-                                            <img class="d-flex me-2 rounded-circle" src=" /images/users/avatar-5.jpg" alt="Generic placeholder image" height="32">
-                                            <div class="w-100">
-                                                <h5 class="m-0 font-14">Jacob Deo</h5>
-                                                <span class="font-12 mb-0">Developer</span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
+                        
                     </div>
 
                     <ul class="topbar-menu d-flex align-items-center gap-3">
-                        <li class="dropdown d-lg-none">
-                            <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
-                                <i class="ri-search-line font-22"></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-animated dropdown-lg p-0">
-                                <form class="p-3">
-                                    <input type="search" class="form-control" placeholder="Search ..." aria-label="Recipient's username">
-                                </form>
-                            </div>
-                        </li>
-
- 
 
                         <li class="d-none d-sm-inline-block">
-                            <a class="nav-link" data-bs-toggle="offcanvas" href="#theme-settings-offcanvas">
+                            <a class="nav-link" data-bs-toggle="offcanvas" href="#Zoom" data-bs-placement="left" title="Hacer Zoom">
+                                <i class="ri-search-line font-22"></i>
+                            </a>
+                        </li>
+
+                        <li class="d-none d-sm-inline-block">
+                            <a class="nav-link" data-bs-toggle="offcanvas" href="#theme-settings-offcanvas" data-bs-placement="left" title="Ajustes de Tema">
                                 <i class="ri-settings-3-line font-22"></i>
                             </a>
                         </li>
 
                         <li class="d-none d-sm-inline-block">
-                            <div class="nav-link" id="light-dark-mode" data-bs-toggle="tooltip" data-bs-placement="left" title="Theme Mode">
+                            <div class="nav-link" id="light-dark-mode" data-bs-toggle="tooltip" data-bs-placement="left" title="Modo de Tema">
                                 <i class="ri-moon-line font-22"></i>
                             </div>
                         </li>
 
                         
                         <li class="d-none d-md-inline-block">
-                            <a class="nav-link" href="" data-toggle="fullscreen">
+                            <a class="nav-link" href="" data-toggle="fullscreen" data-bs-toggle="tooltip" data-bs-placement="left" title="Pantalla Completa">
                                 <i class="ri-fullscreen-line font-22"></i>
                             </a>
                         </li>
-                        
 
                         <li class="dropdown">
                             <a class="nav-link dropdown-toggle arrow-none nav-user px-2" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
@@ -156,16 +92,16 @@
                                 </div>
 
                                 <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
+                                <a href = "/PAT-035/profile" class="dropdown-item">
                                     <i class="mdi mdi-account-circle me-1"></i>
-                                    <span>Mi Cuenta</span>
+                                    <span>Mi Perfil</span>
                                 </a>
 
 
                                 <!-- item-->
                                 <a href="/logout" class="dropdown-item">
                                     <i class="mdi mdi-logout me-1"></i>
-                                    <span>Cerrar Sesion</span>
+                                    <span>Cerrar Sesión</span>
                                 </a>
                             </div>
                         </li>
@@ -178,7 +114,7 @@
             <div class="leftside-menu">
 
                 <!-- Brand Logo Light -->
-                <a href="index.html" class="logo logo-light">
+                <a href="/PAT-035/home" class="logo logo-light">
                     <span class="logo-lg">
                         <img src=" /images/logo.png" alt="logo">
                     </span>
@@ -188,7 +124,7 @@
                 </a>
 
                 <!-- Brand Logo Dark -->
-                <a href="index.html" class="logo logo-dark">
+                <a href="/PAT-035/home" class="logo logo-dark">
                     <span class="logo-lg">
                         <img src=" /images/logo-dark.png" alt="dark logo">
                     </span>
@@ -211,7 +147,7 @@
                 <div class="h-100" id="leftside-menu-container" data-simplebar>
                     <!-- Leftbar User -->
                     <div class="leftbar-user">
-                        <a href="pages-profile.html">
+                        <a href="">
                             <img src="/images/users/{{user.id}}.jpg" alt="user-image" height="42" class="rounded-circle shadow-sm">
                             <span class="leftbar-user-name mt-2">{{hotel.nombre}}</span>
                         </a>
@@ -220,30 +156,39 @@
                     <!--- Sidemenu -->
                     <ul class="side-nav">
 
-                        <li class="side-nav-title">Navigation</li>
+                        <li class="side-nav-title">Navigación</li>
 
                         <li class="side-nav-item">
                             <a data-bs-toggle="collapse" href="#sidebarDashboards" aria-expanded="false" aria-controls="sidebarDashboards" class="side-nav-link">
-                                <i class="uil-home-alt"></i>
-                                <span class="badge bg-success float-end">5</span>
-                                <span> Dashboards </span>
+                                <i class="uil-globe"></i>
+                                <span class="badge bg-success float-end">4</span>
+                                <span> Apartados </span>
                             </a>
                             <div class="collapse" id="sidebarDashboards">
                                 <ul class="side-nav-second-level">
                                     <li>
-                                        <a href="/PAT-035/home">Estadisticas</a>
+                                        <a href="/PAT-035/home">
+                                            <i class="uil-home-alt"></i>
+                                            <span>Inicio</span>
+                                        </a>
                                     </li>
                                     <li>
-                                        <a href="index.html">Ecommerce</a>
+                                        <a href="/PAT-035/empleados">
+                                            <i class="uil-user"></i>
+                                            <span>Empleados</span>
+                                        </a>
                                     </li>
                                     <li>
-                                        <a href="/PAT-035/empleados">Empleados</a>
+                                        <a href="">
+                                            <i class="uil-clipboard-alt"></i>
+                                            <span>Generar Reporte</span>
+                                        </a>
                                     </li>
                                     <li>
-                                        <a href="dashboard-crm.html">CRM</a>
-                                    </li>
-                                    <li>
-                                        <a href="dashboard-wallet.html">E-Wallet</a>
+                                        <a href="/PAT-035/estadisticasGlobales">
+                                            <i class="uil-graph-bar"></i>
+                                            <span>Estadísticas globales</span>
+                                        </a>
                                     </li>
                                 </ul>
                             </div>
@@ -405,7 +350,38 @@
 
         </div>
         <!-- END wrapper -->
+        <!-- Zoom -->
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="Zoom">
+            <div class="d-flex align-items-center bg-primary p-3 offcanvas-header">
+                <h5 class="text-white m-0">Hacer Zoom</h5>
+                <button type="button" class="btn-close btn-close-white ms-auto" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
 
+            <div class="offcanvas-footer border-top p-3 text-center">
+                <div class="row">
+                    <div class="col-3">
+                        <button type="button" class="btn btn-light w-100" id="reset-layout">
+                            <i class="ri-zoom-out-line font-20"></i>
+                        </button>
+                    </div>
+                    <div class="progress-w-percent col-6">
+                        <span class="fw-bold">100%</span>
+                        <div class="progress progress-sm">
+                            <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <button type="button" class="btn btn-light w-100" id="reset-layout">
+                            <i class="ri-zoom-in-line font-20"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="offcanvas-body p-0">
+
+            </div>
+        </div>
+        <!-- Zoom -->
         <!-- Theme Settings -->
         <div class="offcanvas offcanvas-end" tabindex="-1" id="theme-settings-offcanvas">
             <div class="d-flex align-items-center bg-primary p-3 offcanvas-header">
