Acomodado por completo todo los detalles

--- a/src/views/PAT-035/estadisticasGlobales.hbs
+++ b/src/views/PAT-035/estadisticasGlobales.hbs
@@ -44,7 +44,6 @@
                                 <span></span>
                             </div>
                         </button>
-
                         
                     </div>
 
@@ -57,7 +56,7 @@
                         </li>
 
                         <li class="d-none d-sm-inline-block">
-                            <a class="nav-link" data-bs-toggle="offcanvas" href="#theme-settings-offcanvas" data-bs-placement="left" title="Ajustes de Tema">
+                            <a class="nav-link" data-bs-toggle="offcanvas" href="#theme-settings-offcanvas" data-bs-placement="left" title="Ajuste de Tema">
                                 <i class="ri-settings-3-line font-22"></i>
                             </a>
                         </li>
@@ -147,7 +146,7 @@
                 <div class="h-100" id="leftside-menu-container" data-simplebar>
                     <!-- Leftbar User -->
                     <div class="leftbar-user">
-                        <a href="">
+                        <a href="/PAT-035/profile">
                             <img src="/images/users/{{user.id}}.jpg" alt="user-image" height="42" class="rounded-circle shadow-sm">
                             <span class="leftbar-user-name mt-2">{{hotel.nombre}}</span>
                         </a>
@@ -162,7 +161,7 @@
                             <a data-bs-toggle="collapse" href="#sidebarDashboards" aria-expanded="false" aria-controls="sidebarDashboards" class="side-nav-link">
                                 <i class="uil-globe"></i>
                                 <span class="badge bg-success float-end">4</span>
-                                <span> Apartados </span>
+                                <span> Apartado </span>
                             </a>
                             <div class="collapse" id="sidebarDashboards">
                                 <ul class="side-nav-second-level">
@@ -175,7 +174,7 @@
                                     <li>
                                         <a href="/PAT-035/empleados">
                                             <i class="uil-user"></i>
-                                            <span>Empleados</span>
+                                            <span>Empleado</span>
                                         </a>
                                     </li>
                                     <li>
@@ -187,7 +186,7 @@
                                     <li>
                                         <a href="/PAT-035/estadisticasGlobales">
                                             <i class="uil-graph-bar"></i>
-                                            <span>Estadísticas globales</span>
+                                            <span>Estadística global</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -345,7 +344,7 @@
         <!-- Theme Settings -->
         <div class="offcanvas offcanvas-end" tabindex="-1" id="theme-settings-offcanvas">
             <div class="d-flex align-items-center bg-primary p-3 offcanvas-header">
-                <h5 class="text-white m-0">Ajustes de Tema</h5>
+                <h5 class="text-white m-0">Ajuste de Tema</h5>
                 <button type="button" class="btn-close btn-close-white ms-auto" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
 
