--- a/src/views/PAT-035/empleados.hbs
+++ b/src/views/PAT-035/empleados.hbs
@@ -57,7 +57,7 @@
                         </li>
 
                         <li class="d-none d-sm-inline-block">
-                            <a class="nav-link" data-bs-toggle="offcanvas" href="#theme-settings-offcanvas" data-bs-placement="left" title="Ajustes de Tema">
+                            <a class="nav-link" data-bs-toggle="offcanvas" href="#theme-settings-offcanvas" data-bs-placement="left" title="Ajuste de Tema">
                                 <i class="ri-settings-3-line font-22"></i>
                             </a>
                         </li>
@@ -147,7 +147,7 @@
                 <div class="h-100" id="leftside-menu-container" data-simplebar>
                     <!-- Leftbar User -->
                     <div class="leftbar-user">
-                        <a href="">
+                        <a href="/PAT-035/profile">
                             <img src="/images/users/{{user.id}}.jpg" alt="user-image" height="42" class="rounded-circle shadow-sm">
                             <span class="leftbar-user-name mt-2">{{hotel.nombre}}</span>
                         </a>
@@ -162,7 +162,7 @@
                             <a data-bs-toggle="collapse" href="#sidebarDashboards" aria-expanded="false" aria-controls="sidebarDashboards" class="side-nav-link">
                                 <i class="uil-globe"></i>
                                 <span class="badge bg-success float-end">4</span>
-                                <span> Apartados </span>
+                                <span> Apartado </span>
                             </a>
                             <div class="collapse" id="sidebarDashboards">
                                 <ul class="side-nav-second-level">
@@ -175,7 +175,7 @@
                                     <li>
                                         <a href="/PAT-035/empleados">
                                             <i class="uil-user"></i>
-                                            <span>Empleados</span>
+                                            <span>Empleado</span>
                                         </a>
                                     </li>
                                     <li>
@@ -187,7 +187,7 @@
                                     <li>
                                         <a href="/PAT-035/estadisticasGlobales">
                                             <i class="uil-graph-bar"></i>
-                                            <span>Estadísticas globales</span>
+                                            <span>Estadística global</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -651,60 +651,15 @@
         <!-- Theme Settings -->
         <div class="offcanvas offcanvas-end" tabindex="-1" id="theme-settings-offcanvas">
             <div class="d-flex align-items-center bg-primary p-3 offcanvas-header">
-                <h5 class="text-white m-0">Theme Settings</h5>
+                <h5 class="text-white m-0">Ajuste de Tema</h5>
                 <button type="button" class="btn-close btn-close-white ms-auto" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
 
             <div class="offcanvas-body p-0">
                 <div data-simplebar class="h-100">
                     <div class="card mb-0 p-3">
-                        <h5 class="mt-0 font-16 fw-bold mb-3">Choose Layout</h5>
-                        <div class="row">
-                            <div class="col-4">
-                                <div class="form-check card-radio">
-                                    <input id="customizer-layout01" name="data-layout" type="radio" value="vertical" class="form-check-input">
-                                    <label class="form-check-label p-0 avatar-md w-100" for="customizer-layout01">
-                                        <span class="d-flex h-100">
-                                            <span class="flex-shrink-0">
-                                                <span class="bg-light d-flex h-100 border-end flex-column p-1 px-2">
-                                                    <span class="d-block p-1 bg-dark-lighten rounded mb-1"></span>
-                                                    <span class="d-block border border-3 border-secondary border-opacity-25 rounded w-100 mb-1"></span>
-                                                    <span class="d-block border border-3 border-secondary border-opacity-25 rounded w-100 mb-1"></span>
-                                                    <span class="d-block border border-3 border-secondary border-opacity-25 rounded w-100 mb-1"></span>
-                                                    <span class="d-block border border-3 border-secondary border-opacity-25 rounded w-100 mb-1"></span>
-                                                </span>
-                                            </span>
-                                            <span class="flex-grow-1">
-                                                <span class="d-flex h-100 flex-column">
-                                                    <span class="bg-light d-block p-1"></span>
-                                                </span>
-                                            </span>
-                                        </span>
-                                    </label>
-                                </div>
-                                <h5 class="font-14 text-center text-muted mt-2">Vertical</h5>
-                            </div>
-                            <div class="col-4">
-                                <div class="form-check card-radio">
-                                    <input id="customizer-layout02" name="data-layout" type="radio" value="horizontal" class="form-check-input">
-                                    <label class="form-check-label p-0 avatar-md w-100" for="customizer-layout02">
-                                        <span class="d-flex h-100 flex-column">
-                                            <span class="bg-light d-flex p-1 align-items-center border-bottom border-secondary border-opacity-25">
-                                                <span class="d-block p-1 bg-dark-lighten rounded me-1"></span>
-                                                <span class="d-block border border-3 border-secondary border-opacity-25 rounded ms-auto"></span>
-                                                <span class="d-block border border-3 border-secondary border-opacity-25 rounded ms-1"></span>
-                                                <span class="d-block border border-3 border-secondary border-opacity-25 rounded ms-1"></span>
-                                                <span class="d-block border border-3 border-secondary border-opacity-25 rounded ms-1"></span>
-                                            </span>
-                                            <span class="bg-light d-block p-1"></span>
-                                        </span>
-                                    </label>
-                                </div>
-                                <h5 class="font-14 text-center text-muted mt-2">Horizontal</h5>
-                            </div>
-                        </div>
 
-                        <h5 class="my-3 font-16 fw-bold">Color Scheme</h5>
+                        <h5 class="my-3 font-16 fw-bold">Esquema de Colores</h5>
 
                         <div class="colorscheme-cardradio">
                             <div class="row">
@@ -747,7 +702,7 @@
                                             </div>
                                         </label>
                                     </div>
-                                    <h5 class="font-14 text-center text-muted mt-2">Light</h5>
+                                    <h5 class="font-14 text-center text-muted mt-2">Claro</h5>
                                 </div>
 
                                 <div class="col-4">
@@ -787,13 +742,13 @@
                                             </div>
                                         </label>
                                     </div>
-                                    <h5 class="font-14 text-center text-muted mt-2">Dark</h5>
+                                    <h5 class="font-14 text-center text-muted mt-2">Oscuro</h5>
                                 </div>
                             </div>
                         </div>
 
                         <div id="layout-width">
-                            <h5 class="my-3 font-16 fw-bold">Layout Mode</h5>
+                            <h5 class="my-3 font-16 fw-bold">Modo de Diseño</h5>
 
                             <div class="row">
                                 <div class="col-4">
@@ -833,7 +788,7 @@
                                             </div>
                                         </label>
                                     </div>
-                                    <h5 class="font-14 text-center text-muted mt-2">Fluid</h5>
+                                    <h5 class="font-14 text-center text-muted mt-2">Fluido</h5>
                                 </div>
                                 <div class="col-4" id="layout-boxed">
                                     <div class="form-check card-radio">
@@ -872,7 +827,7 @@
                                             </div>
                                         </label>
                                     </div>
-                                    <h5 class="font-14 text-center text-muted mt-2">Boxed</h5>
+                                    <h5 class="font-14 text-center text-muted mt-2">Encajonado</h5>
                                 </div>
 
                                 <div class="col-4" id="layout-detached">
@@ -901,12 +856,12 @@
 
                                         </label>
                                     </div>
-                                    <h5 class="font-14 text-center text-muted mt-2">Detached</h5>
+                                    <h5 class="font-14 text-center text-muted mt-2">Separado</h5>
                                 </div>
                             </div>
                         </div>
 
-                        <h5 class="my-3 font-16 fw-bold">Topbar Color</h5>
+                        <h5 class="my-3 font-16 fw-bold">Color de la Barra Superior</h5>
 
                         <div class="row">
                             <div class="col-4">
@@ -946,7 +901,7 @@
                                         </div>
                                     </label>
                                 </div>
-                                <h5 class="font-14 text-center text-muted mt-2">Light</h5>
+                                <h5 class="font-14 text-center text-muted mt-2">Claro</h5>
                             </div>
 
                             <div class="col-4" style="--ct-dark-rgb: 64,73,84;">
@@ -986,7 +941,7 @@
                                         </div>
                                     </label>
                                 </div>
-                                <h5 class="font-14 text-center text-muted mt-2">Dark</h5>
+                                <h5 class="font-14 text-center text-muted mt-2">Oscuro</h5>
                             </div>
 
                             <div class="col-4">
@@ -1026,12 +981,12 @@
                                         </div>
                                     </label>
                                 </div>
-                                <h5 class="font-14 text-center text-muted mt-2">Brand</h5>
+                                <h5 class="font-14 text-center text-muted mt-2">Tildado</h5>
                             </div>
                         </div>
 
                         <div>
-                            <h5 class="my-3 font-16 fw-bold">Menu Color</h5>
+                            <h5 class="my-3 font-16 fw-bold">Color del Menú</h5>
 
                             <div class="row">
                                 <div class="col-4">
@@ -1071,7 +1026,7 @@
                                             </div>
                                         </label>
                                     </div>
-                                    <h5 class="font-14 text-center text-muted mt-2">Light</h5>
+                                    <h5 class="font-14 text-center text-muted mt-2">Claro</h5>
                                 </div>
 
                                 <div class="col-4" style="--ct-dark-rgb: 64,73,84; --ct-border-color: #dee2e6;">
@@ -1111,7 +1066,7 @@
                                             </div>
                                         </label>
                                     </div>
-                                    <h5 class="font-14 text-center text-muted mt-2">Dark</h5>
+                                    <h5 class="font-14 text-center text-muted mt-2">Oscuro</h5>
                                 </div>
                                 <div class="col-4">
                                     <div class="form-check sidebar-setting card-radio">
@@ -1151,13 +1106,13 @@
 
                                         </label>
                                     </div>
-                                    <h5 class="font-14 text-center text-muted mt-2">Brand</h5>
+                                    <h5 class="font-14 text-center text-muted mt-2">Tildado</h5>
                                 </div>
                             </div>
                         </div>
 
                         <div id="sidebar-size">
-                            <h5 class="my-3 font-16 fw-bold">Sidebar Size</h5>
+                            <h5 class="my-3 font-16 fw-bold">Tamaño de la Barra Lateral</h5>
 
                             <div class="row">
                                 <div class="col-4">
@@ -1182,7 +1137,7 @@
                                             </span>
                                         </label>
                                     </div>
-                                    <h5 class="font-14 text-center text-muted mt-2">Default</h5>
+                                    <h5 class="font-14 text-center text-muted mt-2">Por Defecto</h5>
                                 </div>
 
                                 <div class="col-4">
@@ -1207,7 +1162,7 @@
                                             </span>
                                         </label>
                                     </div>
-                                    <h5 class="font-14 text-center text-muted mt-2">Compact</h5>
+                                    <h5 class="font-14 text-center text-muted mt-2">Compacto</h5>
                                 </div>
 
                                 <div class="col-4">
@@ -1232,7 +1187,7 @@
                                             </span>
                                         </label>
                                     </div>
-                                    <h5 class="font-14 text-center text-muted mt-2">Condensed</h5>
+                                    <h5 class="font-14 text-center text-muted mt-2">Condensado</h5>
                                 </div>
 
                                 <div class="col-4">
@@ -1257,7 +1212,7 @@
                                             </span>
                                         </label>
                                     </div>
-                                    <h5 class="font-14 text-center text-muted mt-2">Hover View</h5>
+                                    <h5 class="font-14 text-center text-muted mt-2">Vista Flotante</h5>
                                 </div>
 
                                 <div class="col-4">
@@ -1278,7 +1233,7 @@
                                             </span>
                                         </label>
                                     </div>
-                                    <h5 class="font-14 text-center text-muted mt-2">Full Layout</h5>
+                                    <h5 class="font-14 text-center text-muted mt-2">Diseño Completo</h5>
                                 </div>
 
                                 <div class="col-4">
@@ -1294,26 +1249,14 @@
                                             </span>
                                         </label>
                                     </div>
-                                    <h5 class="font-14 text-center text-muted mt-2">Fullscreen Layout</h5>
+                                    <h5 class="font-14 text-center text-muted mt-2">Diseño de Pantalla Completa</h5>
                                 </div>
-                            </div>
-                        </div>
-
-                        <div id="layout-position">
-                            <h5 class="my-3 font-16 fw-bold">Layout Position</h5>
-
-                            <div class="btn-group radio" role="group">
-                                <input type="radio" class="btn-check" name="data-layout-position" id="layout-position-fixed" value="fixed">
-                                <label class="btn btn-soft-primary w-sm" for="layout-position-fixed">Fixed</label>
-
-                                <input type="radio" class="btn-check" name="data-layout-position" id="layout-position-scrollable" value="scrollable">
-                                <label class="btn btn-soft-primary w-sm ms-0" for="layout-position-scrollable">Scrollable</label>
                             </div>
                         </div>
 
                         <div id="sidebar-user">
                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                <label class="font-16 fw-bold m-0" for="sidebaruser-check">Sidebar User Info</label>
+                                <label class="font-16 fw-bold m-0" for="sidebaruser-check">Información de uso de la Barra Lateral</label>
                                 <div class="form-check form-switch">
                                     <input type="checkbox" class="form-check-input" name="sidebar-user" id="sidebaruser-check">
                                 </div>
@@ -1326,11 +1269,8 @@
             </div>
             <div class="offcanvas-footer border-top p-3 text-center">
                 <div class="row">
-                    <div class="col-6">
-                        <button type="button" class="btn btn-light w-100" id="reset-layout">Reset</button>
-                    </div>
-                    <div class="col-6">
-                        <a href="https://themes.getbootstrap.com/product/hyper-responsive-admin-dashboard-template/" target="_blank" role="button" class="btn btn-primary w-100">Buy Now</a>
+                    <div class="col-12">
+                        <button type="button" class="btn btn-light w-100" id="reset-layout">Reiniciar</button>
                     </div>
                 </div>
             </div>
