Inicio de sesion actualizado
Los detalles del inicio de sesion han sido actualizados

--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -7,7 +7,7 @@
 
                             <!-- Logo -->
                             <div class="card-header py-4 text-center bg-primary">
-                                <a href="index.html">
+                                <a>
                                     <span><img src="/images/logo.png" alt="logo" height="22"></span>
                                 </a>
                             </div>
@@ -62,7 +62,7 @@
         <!-- end page -->
 
         <footer class="footer footer-alt">
-            2018 - <script>document.write(new Date().getFullYear())</script> © Hyper - Coderthemes.com
+            2018 - <script>document.write(new Date().getFullYear())</script> © PAT035 - 35Coderthemes.com
         </footer>
         <!-- Vendor js -->
         <script src="/js/vendor.min.js"></script>
