--- a/src/views/auth/signup.hbs
+++ b/src/views/auth/signup.hbs
@@ -7,7 +7,7 @@
                         <div class="card">
                             <!-- Logo-->
                             <div class="card-header py-4 text-center bg-primary">
-                                <a href="index.html">
+                                <a>
                                     <span><img src="/images/logo.png" alt="logo" height="22"></span>
                                 </a>
                             </div>
@@ -50,7 +50,7 @@
 
                         <div class="row mt-3">
                             <div class="col-12 text-center">
-                                <p class="text-muted">Ya tiene cuenta? <a href="pages-login.html" class="text-muted ms-1"><b>Ingresar</b></a></p>
+                                <p class="text-muted">Ya tiene cuenta? <a href="signin" class="text-muted ms-1"><b>Ingresar</b></a></p>
                             </div> <!-- end col-->
                         </div>
                         <!-- end row -->
@@ -64,7 +64,7 @@
         <!-- end page -->
 
         <footer class="footer footer-alt">
-            2018 - <script>document.write(new Date().getFullYear())</script> © Hyper - Coderthemes.com
+            2018 - <script>document.write(new Date().getFullYear())</script> © PAT035 - 35Coderthemes.com
         </footer>
 
         <!-- Vendor js -->
