Correpcion de editEmpleado

--- a/src/views/PAT-035/editEmpleado.hbs
+++ b/src/views/PAT-035/editEmpleado.hbs
@@ -45,6 +45,8 @@
                             </div>
                         </button>
 
+                    </div>
+                    
                     <ul class="topbar-menu d-flex align-items-center gap-3">
 
                         <li class="d-none d-sm-inline-block">
