--- a/src/views/PAT-035/estadisticasGlobales.hbs
+++ b/src/views/PAT-035/estadisticasGlobales.hbs
@@ -178,7 +178,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="/PAT-035/reportes">
                                             <i class="uil-clipboard-alt"></i>
                                             <span>Generar Reporte</span>
                                         </a>
