--- a/src/views/PAT-035/home.hbs
+++ b/src/views/PAT-035/home.hbs
@@ -179,7 +179,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="">
+                                        <a href="/PAT-035/reportes">
                                             <i class="uil-clipboard-alt"></i>
                                             <span>Generar Reporte</span>
                                         </a>
